log
Sat Mar 12 17:30:34 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c= a+b;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
c9a03e3
Sat Mar 12 17:31:50 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c= a+b;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
44fffee
Sat Mar 12 17:32:33 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a+b;
      ^
cc1.exe: all warnings being treated as errors
Compilation failed
50b9694
Sat Mar 12 17:34:27 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1.exe: all warnings being treated as errors
Compilation failed
335a667
Sat Mar 12 17:35:35 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b0f8814
Sat Mar 12 18:31:11 HSP 2022: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
9f8ed5e
Sat Mar 12 18:32:08 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
7c60ea1
Sat Mar 12 18:34:11 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5719c1b
Sat Mar 12 18:41:04 HSP 2022: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:62:25: error: request for member 'nombre' in something not a structure or union
    strcpy(humano->nombre.nombre);
                         ^
exercises.c:62:4: error: too few arguments to function 'strcpy'
    strcpy(humano->nombre.nombre);
    ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
830b6d5
